--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Kitsu - Collaboration Platform For Animation And VFX Studios</title>
     <link rel="stylesheet" type="text/css" href="/css/bulma.css" />
+    <link rel="preload" href="/api/config" as="fetch" crossorigin />
     <link rel="icon" href="/favicon.ico" />
   </head>
   <body>
